<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <Button
        android:id="@+id/homeHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="hHomeClicked"
        android:text="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/homePortfolioButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <Button
        android:id="@+id/homePortfolioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="hPortfolioClicked"
        android:text="Portfolio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/homeSettingsButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/homeHomeButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <Button
        android:id="@+id/homeSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="hSettingsClicked"
        android:text="Settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/homePortfolioButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <TextView
        android:id="@+id/valueTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Name"
        app:layout_constraintEnd_toStartOf="@+id/valueTitle"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ownedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Owned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/valueTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coin1Value"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valueTitle" />

    <TextView
        android:id="@+id/coin1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/coin1Value"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTitle" />

    <TextView
        android:id="@+id/coin1Owned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/coin1Value"
        app:layout_constraintTop_toBottomOf="@+id/ownedTitle" />

    <TextView
        android:id="@+id/coin2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coin2Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coin1Value" />

    <TextView
        android:id="@+id/coin2Owned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coin3Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="145dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coin3Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coin2Value" />

    <TextView
        android:id="@+id/coin3Owned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="119dp"
        android:layout_marginLeft="180dp"
        android:layout_marginRight="119dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="145dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coin3Value"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bitcoinButton"
        android:layout_width="97dp"
        android:layout_height="37dp"
        android:layout_marginBottom="116dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="27dp"
        android:text="Bitcoin"
        app:layout_constraintBottom_toTopOf="@+id/homeHomeButton"
        app:layout_constraintEnd_toStartOf="@+id/litecoinButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/litecoinButton"
        android:layout_width="97dp"
        android:layout_height="37dp"
        android:layout_marginBottom="74dp"
        android:layout_marginEnd="143dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="143dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="172dp"
        android:text="LiteCoin"
        app:layout_constraintBottom_toTopOf="@+id/homePortfolioButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bitcoinButton"
        app:layout_constraintTop_toBottomOf="@+id/coin3Value" />

    <Button
        android:id="@+id/ethButton"
        android:layout_width="97dp"
        android:layout_height="37dp"
        android:layout_marginBottom="74dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="172dp"
        android:text="Ethereum"
        app:layout_constraintBottom_toTopOf="@+id/homeSettingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/litecoinButton"
        app:layout_constraintTop_toBottomOf="@+id/coin3Owned" />

</android.support.constraint.ConstraintLayout>