...
        android:text="Yen (JPY)"
        app:layout_constraintBottom_toTopOf="@+id/portfolioSettingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/euros" />

    <Button
        android:id="@+id/compareButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="124dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="1dp"
        android:text="Compare"
        app:layout_constraintEnd_toStartOf="@+id/compositionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
