...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bitcoinCompare">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="297dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="297dp"
        android:layout_marginStart="7dp"
...
