...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ethereumCompare">

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="281dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="281dp"
        android:layout_marginStart="16dp"
...
